monitor-manager: Fix crash when UPower is not available

Don't access the upower client if it doesn't exist

https://bugzilla.gnome.org/show_bug.cgi?id=780407